--- a/LuckDraw/View/Pages/Page_多选一.xaml
+++ b/LuckDraw/View/Pages/Page_多选一.xaml
@@ -9,20 +9,20 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="44*"/>
-            <RowDefinition Height="345*"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
         <TextBox x:Name="TextBox_List" Margin="10,25.24,10,10" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" Grid.Row="1" SelectionChanged="TextBox_List_SelectionChanged"/>
-        <Button x:Name="Button_Draw" Content="抽取下一个" Grid.Column="1" HorizontalAlignment="Center" Margin="144.5,10,144.5,0" VerticalAlignment="Top" Width="75" Click="Button_Draw_Click" Height="24"/>
+        <Button x:Name="Button_Draw" Content="抽取下一个" HorizontalAlignment="Left" Margin="110,10,0,0" VerticalAlignment="Top" Width="75" Click="Button_Draw_Click" Height="24"/>
         <TextBox x:Name="TextBox_Result" Grid.Column="1" Margin="10,25.24,10,10" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" Grid.Row="1"/>
-        <Label Content="抽奖结果：" Grid.Column="1" Margin="10,0" VerticalAlignment="Top" Grid.Row="1" Height="25.24"/>
-        <Label Content="抽奖列表：（一行一个）" Margin="10,0" VerticalAlignment="Top" Height="25.24" Grid.Row="1"/>
-        <Button x:Name="Button_ClearResult" Content="清空结果" Grid.Column="1" HorizontalAlignment="Left" Margin="254,10,0,0" VerticalAlignment="Top" Width="75" Height="24" Click="Button_ClearResult_Click"/>
-        <CheckBox x:Name="CheckBox_AllowDuplicateWinning" Content="允许重复中奖" HorizontalAlignment="Left" Margin="67,10,0,0" VerticalAlignment="Top" Click="CheckBox_AllowDuplicateWinning_Click" IsChecked="True"/>
+        <Label Content="抽奖结果：" Grid.Column="1" Margin="10,0" VerticalAlignment="Top" Grid.Row="1" Height="25.24" Padding="0,5"/>
+        <Label Content="抽奖列表：（一行一个）" Margin="10,0" VerticalAlignment="Top" Height="25.24" Grid.Row="1" Padding="0,5"/>
+        <Button x:Name="Button_ClearResult" Content="清空结果" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="75" Height="24" Click="Button_ClearResult_Click" Grid.Column="1"/>
+        <CheckBox x:Name="CheckBox_AllowDuplicateWinning" Content="允许重复中奖" HorizontalAlignment="Left" Margin="10,15,0,0" VerticalAlignment="Top" Click="CheckBox_AllowDuplicateWinning_Click" IsChecked="True" VerticalContentAlignment="Center" Padding="4,0,0,0"/>
 
     </Grid>
 </Page>
