--- a/LuckDraw/View/Windows/MainWindow.xaml
+++ b/LuckDraw/View/Windows/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="LuckDraw.View.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="抽奖程序" Height="600" Width="800" WindowStartupLocation="CenterScreen">
+        Title="抽奖程序" Height="400" Width="600" WindowStartupLocation="CenterScreen" MinWidth="400" MinHeight="300">
     <Grid>
         <Menu Height="25" Margin="0" VerticalAlignment="Top" Background="{x:Null}">
             <MenuItem Header="File" Height="25">
