--- a/LuckDraw/View/Pages/Page_Draw1.xaml
+++ b/LuckDraw/View/Pages/Page_Draw1.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="LuckDraw.View.Pages.Page_多选一"
+﻿<Page x:Class="LuckDraw.View.Pages.Page_Draw1"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
