--- a/LuckDraw/View/Windows/MainWindow.xaml
+++ b/LuckDraw/View/Windows/MainWindow.xaml
@@ -1,22 +1,23 @@
 ﻿<Window x:Class="LuckDraw.View.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="抽奖程序" Height="400" Width="600" WindowStartupLocation="CenterScreen" MinWidth="400" MinHeight="300">
+        Title="抽奖程序" Height="400" Width="600" WindowStartupLocation="CenterScreen" MinWidth="400" MinHeight="300" ResizeMode="CanResizeWithGrip" WindowStyle="None" AllowsTransparency="True" Background="#FFD6DBE9" MouseLeftButtonDown="Window_MouseLeftButtonDown">
     <Grid>
-        <Menu Height="25" Margin="0" VerticalAlignment="Top" Background="{x:Null}">
-            <MenuItem Header="File" Height="25">
+        <Menu Height="25" Margin="0,0,60,0" VerticalAlignment="Top" Background="{x:Null}">
+            <MenuItem Header="File" VerticalAlignment="Center" Height="25">
                 <MenuItem x:Name="MenuItem_File_Exit" Header="Exit" Click="MenuItem_File_Exit_Click"/>
             </MenuItem>
-            <MenuItem Header="Help" Height="25">
+            <MenuItem Header="Help" VerticalAlignment="Center" Height="25">
                 <MenuItem x:Name="MenuItem_Help_About" Header="About" Click="MenuItem_Help_About_Click"/>
             </MenuItem>
         </Menu>
-        <TabControl Margin="0,25,0,0" BorderThickness="0,1,0,0" Padding="0">
+        <TabControl Margin="10,25,10,10" BorderThickness="1" Padding="0">
             <TabItem Header="抽奖">
                 <Grid Background="White">
                     <Frame x:Name="Frame_1" Content="" Margin="0" NavigationUIVisibility="Hidden"/>
                 </Grid>
             </TabItem>
         </TabControl>
+        <Button x:Name="Button_Close" Content="X" HorizontalAlignment="Right" Margin="0,0,10,0" Width="25" BorderThickness="0" Click="Button_Close_Click" Background="{x:Null}" BorderBrush="{x:Null}" Padding="0" VerticalAlignment="Top" Focusable="False"/>
     </Grid>
 </Window>
