Wow角色功能界面及设计完成，下一步实现功能

--- a/LuckDraw/Views/Pages/Page_Draw.xaml
+++ b/LuckDraw/Views/Pages/Page_Draw.xaml
@@ -1,11 +1,11 @@
-﻿<Page x:Class="LuckDraw.View.Pages.Page_Draw1"
+﻿<Page x:Class="LuckDraw.View.Pages.Page_Draw"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
       d:DesignHeight="389" d:DesignWidth="728"
-	Title="Page_多选一">
+	Title="Page_Draw">
 
     <Grid>
         <Grid.RowDefinitions>
