--- a/LuckDraw/App.xaml
+++ b/LuckDraw/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="LuckDraw.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="View\Windows\MainWindow.xaml">
+             StartupUri="Views\Windows\MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
