--- a/LuckDraw/Views/Windows/MainWindow.xaml
+++ b/LuckDraw/Views/Windows/MainWindow.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="LuckDraw.View.Windows.MainWindow"
+﻿<Window x:Class="LuckDraw.Views.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="抽奖程序" Height="400" Width="600" WindowStartupLocation="CenterScreen" MinWidth="400" MinHeight="300" ResizeMode="CanResizeWithGrip" WindowStyle="None" AllowsTransparency="True" Background="#FFD6DBE9" MouseLeftButtonDown="Window_MouseLeftButtonDown">
+        Title="抽奖程序" Height="450" Width="650" WindowStartupLocation="CenterScreen" MinWidth="650" MinHeight="450" ResizeMode="CanResizeWithGrip" WindowStyle="None" AllowsTransparency="True" Background="#FFD6DBE9" MouseLeftButtonDown="Window_MouseLeftButtonDown">
     <Grid>
         <Menu Height="25" Margin="10,0,60,0" VerticalAlignment="Top" Background="{x:Null}">
             <MenuItem Header="File" VerticalAlignment="Center" Height="25" RenderTransformOrigin="0.5,0.5">
@@ -15,6 +15,11 @@
             <TabItem Header="抽奖">
                 <Grid Background="White">
                     <Frame x:Name="Frame_1" Content="" Margin="0" NavigationUIVisibility="Hidden"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Wow角色">
+                <Grid Background="White">
+                    <Frame x:Name="Frame_WowRole" Content="" Margin="0" NavigationUIVisibility="Hidden"/>
                 </Grid>
             </TabItem>
         </TabControl>
