--- a/LuckDraw/Views/Pages/Page_WowRole.xaml
+++ b/LuckDraw/Views/Pages/Page_WowRole.xaml
@@ -35,19 +35,19 @@
             <CheckBox x:Name="CheckBox_Occupation_SS" Content="术士"     HorizontalAlignment="Left" Margin="25,10,0,0" VerticalAlignment="Top" Foreground="#FF8A76B2" Click="CheckBox_Occupation_Details_Click"/>
         </StackPanel>
         <StackPanel x:Name="StackPanel_Race" Grid.Column="1" Grid.Row="1">
-            <CheckBox Content="熊猫人"   HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox Content="德莱尼人" HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox Content="矮人"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox Content="人类"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox Content="侏儒"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox Content="暗夜精灵" HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox Content="狼人"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox Content="血精灵"   HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox Content="亡灵"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox Content="地精"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox Content="兽人"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox Content="牛头人"   HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox Content="巨魔"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
+            <CheckBox x:Name="CheckBox_Race_1"  Content="熊猫人"   HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
+            <CheckBox x:Name="CheckBox_Race_2"  Content="德莱尼人" HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
+            <CheckBox x:Name="CheckBox_Race_3"  Content="矮人"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
+            <CheckBox x:Name="CheckBox_Race_4"  Content="人类"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
+            <CheckBox x:Name="CheckBox_Race_5"  Content="侏儒"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
+            <CheckBox x:Name="CheckBox_Race_6"  Content="暗夜精灵" HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
+            <CheckBox x:Name="CheckBox_Race_7"  Content="狼人"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
+            <CheckBox x:Name="CheckBox_Race_8"  Content="血精灵"   HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
+            <CheckBox x:Name="CheckBox_Race_9"  Content="亡灵"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
+            <CheckBox x:Name="CheckBox_Race_10"  Content="地精"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
+            <CheckBox x:Name="CheckBox_Race_11" Content="兽人"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
+            <CheckBox x:Name="CheckBox_Race_12" Content="牛头人"   HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
+            <CheckBox x:Name="CheckBox_Race_13" Content="巨魔"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
         </StackPanel>
         <StackPanel x:Name="StackPanel_Gender" Grid.Column="2" Grid.Row="1">
             <CheckBox x:Name="CheckBox_Male" Content="男" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Click="CheckBox_Gender_Details_Click"/>
