--- a/LuckDraw/Views/Pages/Page_WowRole.xaml
+++ b/LuckDraw/Views/Pages/Page_WowRole.xaml
@@ -35,29 +35,31 @@
             <CheckBox x:Name="CheckBox_Occupation_SS" Content="术士"     HorizontalAlignment="Left" Margin="25,10,0,0" VerticalAlignment="Top" Foreground="#FF8A76B2" Click="CheckBox_Occupation_Details_Click"/>
         </StackPanel>
         <StackPanel x:Name="StackPanel_Race" Grid.Column="1" Grid.Row="1">
-            <CheckBox x:Name="CheckBox_Race_1"  Content="熊猫人"   HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox x:Name="CheckBox_Race_2"  Content="德莱尼人" HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox x:Name="CheckBox_Race_3"  Content="矮人"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox x:Name="CheckBox_Race_4"  Content="人类"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox x:Name="CheckBox_Race_5"  Content="侏儒"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox x:Name="CheckBox_Race_6"  Content="暗夜精灵" HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox x:Name="CheckBox_Race_7"  Content="狼人"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox x:Name="CheckBox_Race_8"  Content="血精灵"   HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox x:Name="CheckBox_Race_9"  Content="亡灵"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox x:Name="CheckBox_Race_10"  Content="地精"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox x:Name="CheckBox_Race_11" Content="兽人"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox x:Name="CheckBox_Race_12" Content="牛头人"   HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
-            <CheckBox x:Name="CheckBox_Race_13" Content="巨魔"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Click="CheckBox_Race_Details_Click"/>
+            <CheckBox x:Name="CheckBox_Race_1"  Content="熊猫人"   HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" />
+            <CheckBox x:Name="CheckBox_Race_2"  Content="德莱尼人" HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" />
+            <CheckBox x:Name="CheckBox_Race_3"  Content="矮人"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" />
+            <CheckBox x:Name="CheckBox_Race_4"  Content="人类"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" />
+            <CheckBox x:Name="CheckBox_Race_5"  Content="侏儒"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" />
+            <CheckBox x:Name="CheckBox_Race_6"  Content="暗夜精灵" HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" />
+            <CheckBox x:Name="CheckBox_Race_7"  Content="狼人"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" />
+            <CheckBox x:Name="CheckBox_Race_8"  Content="血精灵"   HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" />
+            <CheckBox x:Name="CheckBox_Race_9"  Content="亡灵"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" />
+            <CheckBox x:Name="CheckBox_Race_10"  Content="地精"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" />
+            <CheckBox x:Name="CheckBox_Race_11" Content="兽人"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" />
+            <CheckBox x:Name="CheckBox_Race_12" Content="牛头人"   HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" />
+            <CheckBox x:Name="CheckBox_Race_13" Content="巨魔"     HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" />
         </StackPanel>
         <StackPanel x:Name="StackPanel_Gender" Grid.Column="2" Grid.Row="1">
-            <CheckBox x:Name="CheckBox_Male" Content="男" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Click="CheckBox_Gender_Details_Click"/>
-            <CheckBox x:Name="CheckBox_Female" Content="女" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Click="CheckBox_Gender_Details_Click"/>
+            <CheckBox x:Name="CheckBox_Male" Content="男" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" />
+            <CheckBox x:Name="CheckBox_Female" Content="女" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" />
         </StackPanel>
-        <Button x:Name="Button_Start" Content="摇号" Grid.Column="3" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center" Width="75" Click="Button_Start_Click"/>
-        <Label x:Name="Label_Result" Content="" Grid.Column="3" Margin="0,40,0,0" Grid.Row="1" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="20" Foreground="White" Padding="0,100,0,0" VerticalAlignment="Top" Width="300" Height="140" HorizontalAlignment="Center">
+        <Button x:Name="Button_Start" Content="摇号" Grid.Column="3" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center" Width="75" Click="Button_Start_Click" IsDefault="True"/>
+        <Label x:Name="Label_Result" Content="" Grid.Column="3" Margin="0,5,0,0" Grid.Row="1" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="20" Foreground="White" Padding="0,100,0,0" VerticalAlignment="Top" Width="300" Height="140" HorizontalAlignment="Center">
             <Label.Background>
                 <ImageBrush ImageSource="/LuckDraw;component/Resources/Images/WowLogo.png" Stretch="Uniform"/>
             </Label.Background>
         </Label>
+        <TextBox x:Name="TextBox_ResultList" Grid.Column="3" Margin="10,150,10,10" Grid.Row="1" TextWrapping="Wrap" Text="Roll号结果：" AcceptsReturn="True" VerticalScrollBarVisibility="Auto"/>
+        <Button x:Name="Button_ClearResultList" Content="清空结果" Grid.Column="3" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="75" HorizontalContentAlignment="Center" Click="Button_ClearResultList_Click"/>
     </Grid>
 </Page>
