--- a/LuckDraw/Views/Pages/Page_WowRole.xaml
+++ b/LuckDraw/Views/Pages/Page_WowRole.xaml
@@ -9,7 +9,7 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="40"/>
+            <RowDefinition Height="35"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -60,6 +60,6 @@
             </Label.Background>
         </Label>
         <TextBox x:Name="TextBox_ResultList" Grid.Column="3" Margin="10,150,10,10" Grid.Row="1" TextWrapping="Wrap" Text="Roll号结果：" AcceptsReturn="True" VerticalScrollBarVisibility="Auto"/>
-        <Button x:Name="Button_ClearResultList" Content="清空结果" Grid.Column="3" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="75" HorizontalContentAlignment="Center" Click="Button_ClearResultList_Click"/>
+        <Button x:Name="Button_ClearResultList" Content="清空结果" Grid.Column="3" HorizontalAlignment="Right" Margin="0,0,10,0" VerticalAlignment="Center" Width="75" HorizontalContentAlignment="Center" Click="Button_ClearResultList_Click"/>
     </Grid>
 </Page>
